<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_audio_cues"
            android:icon="@drawable/ic_queue_audio_black_24dp"
            android:title="@string/drawer_label_toggle_audio_cues"
            app:actionLayout="@layout/option_switch" />
        <item
            android:id="@+id/nav_dark_mode"
            android:icon="@drawable/ic_lightbulb_black_24dp"
            android:title="@string/drawer_label_toggle_dark_mode"
            app:actionLayout="@layout/option_switch" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/drawer_label_settings" />
    </group>
</menu>