<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guidelineDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/header_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <EditText
            android:id="@+id/etTimeElapsed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_timer_black_24dp"
            android:focusableInTouchMode="false"
            android:hint="@string/label_time_elapsed"
            android:imeOptions="actionNone"
            android:text="@string/tv_default_time_elapsed"
            android:textAlignment="textStart" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/header_margin"
        app:layout_constraintTop_toBottomOf="@id/tilTime">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_location_on_black_24dp"
            android:hint="@string/label_distance_travelled"
            android:inputType="numberDecimal"
            android:text="@string/tv_default_distance_travelled"
            android:textAlignment="textStart" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/header_margin"
        app:layout_constraintTop_toBottomOf="@id/tilDistance">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_av_timer_black_24dp"
            android:enabled="false"
            android:focusableInTouchMode="false"
            android:hint="@string/label_average_pace"
            android:text="@string/tv_default_pace" />

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>