<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RunActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".40" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineLockUnlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <!-- timer -->

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_default_time_elapsed"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_timer"
        app:layout_constraintBottom_toTopOf="@id/guidelineGPS"
        app:layout_constraintLeft_toRightOf="@id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop" />

    <!-- gps details -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/guidelineDetails"
        app:layout_constraintLeft_toRightOf="@id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/guidelineGPS">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivAccuracy"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_gps_fixed_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_gps_status"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- distance details -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/guidelineDetails">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_distance_travelled"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_default_distance_travelled"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_details" />

        <TextView
            android:id="@+id/labelDistanceUnit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_distance_travelled_unit_km"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_details" />
    </LinearLayout>

    <!-- speed details -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@id/guidelineCenter"
        app:layout_constraintRight_toLeftOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/guidelineDetails">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_average_pace"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvAveragePace"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/tv_default_pace"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_details" />

        <TextView
            android:id="@+id/labelSpeedUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pace_min_km"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_details" />

    </LinearLayout>

    <!-- buttons -->

    <Button
        android:id="@+id/buttonLock"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/ic_lock_outline_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineButtons"
        app:layout_constraintLeft_toRightOf="@id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/guidelineLockUnlock" />

    <Button
        android:id="@+id/buttonUnlock"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/ic_lock_open_black_24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/guidelineButtons"
        app:layout_constraintLeft_toRightOf="@id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/guidelineLockUnlock" />

    <Button
        android:id="@+id/buttonStart"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_start"
        app:layout_constraintLeft_toRightOf="@id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/guidelineButtons" />

    <Button
        android:id="@+id/buttonPause"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_pause"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/guidelineButtons" />

    <Button
        android:id="@+id/buttonStop"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_stop"
        app:layout_constraintLeft_toRightOf="@id/guidelineCenter"
        app:layout_constraintRight_toLeftOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/guidelineButtons" />

</android.support.constraint.ConstraintLayout>