<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardCornerRadius="1dp"
    app:cardBackgroundColor="?card_background_color">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_space"
        android:paddingEnd="@dimen/text_space"
        android:paddingStart="@dimen/text_space">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ic_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?ic_run" />

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/header_margin"
            android:text="@string/tv_default_date_time"
            android:textSize="@dimen/text_size_card_header"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ic_run"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/header_margin"
            android:text="@string/tv_default_distance_travelled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ic_run"
            app:layout_constraintTop_toBottomOf="@id/tvDateTime" />

        <TextView
            android:id="@+id/tvTimeElapsedPrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_space"
            android:text="@string/tv_bullet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvDistance"
            app:layout_constraintTop_toBottomOf="@id/tvDateTime" />

        <TextView
            android:id="@+id/tvTimeElapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_space"
            android:text="@string/tv_default_time_elapsed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTimeElapsedPrefix"
            app:layout_constraintTop_toBottomOf="@id/tvDateTime" />

        <TextView
            android:id="@+id/tvAveragePacePrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_space"
            android:text="@string/tv_bullet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTimeElapsed"
            app:layout_constraintTop_toBottomOf="@id/tvDateTime" />

        <TextView
            android:id="@+id/tvAveragePace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_space"
            android:text="@string/tv_default_pace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvAveragePacePrefix"
            app:layout_constraintTop_toBottomOf="@id/tvDateTime" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
