<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/runTotalsToolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/header_margin">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.11" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTotalRuns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineDistanceStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineDistanceEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ivNumRuns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@id/tvTotalRuns"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:srcCompat="@drawable/ic_number_black_24dp" />

    <TextView
        android:id="@+id/tvTotalRuns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_space"
        android:text="@string/tv_default_number_of_runs"
        app:layout_constraintEnd_toStartOf="@id/tvLabelRuns"
        app:layout_constraintStart_toEndOf="@id/ivNumRuns" />

    <TextView
        android:id="@+id/tvLabelRuns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_space"
        android:text="@string/label_runs"
        app:layout_constraintEnd_toStartOf="@id/guidelineTotalRuns"
        app:layout_constraintStart_toEndOf="@id/tvTotalRuns" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ivRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@id/tvTotalDistance"
        app:layout_constraintStart_toEndOf="@id/guidelineDistanceStart"
        app:srcCompat="@drawable/ic_run_black_24dp" />

    <TextView
        android:id="@+id/tvTotalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_default_distance_travelled"
        app:layout_constraintEnd_toStartOf="@id/guidelineDistanceEnd"
        app:layout_constraintStart_toEndOf="@id/ivRun" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ivTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@id/tvTotalTime"
        app:layout_constraintStart_toEndOf="@id/guidelineTotalTime"
        app:srcCompat="@drawable/ic_timer_black_24dp" />

    <TextView
        android:id="@+id/tvTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_space"
        android:text="@string/tv_default_time_elapsed"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/ivTimer" />

</android.support.constraint.ConstraintLayout>